--- a/src/components/estilos/Informacion.css
+++ b/src/components/estilos/Informacion.css
@@ -31,8 +31,32 @@
     justify-content: center;
     padding: 20px;
   }
+  .v-container22 {
+    background-color: #ffffff;
+    background-size: cover; 
+    background-position: center; 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
   .v-container3 {
-    background-color: rgb(255, 255, 255);
+    background-color: #0b7a0b;
+    background-size: cover; 
+    background-position: center; 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+  .v-container33 {
+    background-color: #ffffff;
     background-size: cover; 
     background-position: center; 
     width: 100%;
@@ -60,6 +84,14 @@
     margin-bottom: 10px;
     border: 10px double aliceblue;
   }
+  .concejo-img {
+    border-radius: 50%; 
+    width: 300px; 
+    height: 400px;
+    object-fit: cover; 
+    margin-bottom: 10px;
+    border: 10px double #0b7a0b;
+  }
   .escudo-img {
     border-radius: 50%; 
     width: 400px; 
@@ -73,10 +105,10 @@
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 10px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
   }
   .alcalde-title {
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: 45px;
     margin-bottom: 10px;
   }
@@ -105,7 +137,6 @@
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.719); 
     display: inline-block;
     text-align: center;
-    animation: slideIn 5s ease infinite; 
   }
   
   .text-large {
@@ -126,16 +157,24 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #0b7a0b;
+    color: #ffffff;
+  }
+  .estrategia {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #000000;
   }
   
   .descr-mision,
   .descr-vision {
     font-size: 18px;
     margin-bottom: 20px;
+    font-weight: bold;
     text-align: justify;
     margin-left: 20%;
     margin-right: 20%;
+    color: #000;
   }
   
   
