subiendo archivos gestion transparente

--- a/src/components/Direcciones/DesarrolloHumano/slim.css
+++ b/src/components/Direcciones/DesarrolloHumano/slim.css
@@ -9,6 +9,7 @@
     align-items: center;
     justify-content: center;
     padding: 70px;
+    margin-top: 3%;
   }
   .slim {
     font-size: 24px;
