--- a/src/components/Direcciones/EconomiaFinanzas/eco.css
+++ b/src/components/Direcciones/EconomiaFinanzas/eco.css
@@ -160,8 +160,8 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #015f06; /* Color de fondo del botón */
-    color: #fff; /* Color del texto del botón */
+    background-color: #ffffff; /* Color de fondo del botón */
+    color: #02490c; /* Color del texto del botón */
     font-size: 16px;
     padding: 10px 20px;
     border-radius: 5px;
