--- a/src/components/estilos/Informacion.css
+++ b/src/components/estilos/Informacion.css
@@ -1,10 +1,7 @@
 .v-wrapper {
     width: 100%;
     justify-content: center;
-    align-items: center;
-    text-align: center;
     position: relative;
-  
   }
   
   .v-container {
@@ -44,16 +41,30 @@
     padding: 20px;
   }
   .v-container3 {
-    background-color: #0b7a0b;
-    background-size: cover; 
-    background-position: center; 
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-color: #ffffff;
     padding: 20px;
+  }
+  .additional-content-ingre {
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+  
+  .additional-content-ingre h2, .additional-content-ingre h3, .additional-content-ingre h4, .additional-content-ingre h5 {
+    margin-top: 20px;
+  }
+  
+  .additional-content-ingre p, .additional-content-ingre ul, .additional-content-ingre ol {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+ .additional-content-ingre ul, .additional-content-ingre ol {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-left: 10%;
   }
   .v-container33 {
     background-color: #ffffff;
@@ -157,7 +168,7 @@
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
-    color: #ffffff;
+    color: #000000;
   }
   .estrategia {
     font-size: 24px;
@@ -170,7 +181,6 @@
   .descr-vision {
     font-size: 18px;
     margin-bottom: 20px;
-    font-weight: bold;
     text-align: justify;
     margin-left: 20%;
     margin-right: 20%;
